Rebuild game release date system